--- a/about.html
+++ b/about.html
@@ -10,9 +10,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Kaushan+Script&family=Marck+Script&display=swap"
+        rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=WindSong:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Marcellus&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -25,40 +27,6 @@
     <!-- Start Header -->
     <header>
         <div id="overlay" class="d-none"></div>
-        <section id="nav-up">
-            <div class="nav-container">
-                <div class="dropdown">
-                    <a class="dropdown-toggle" href="#" id="Dropdown" role="button" data-mdb-toggle="dropdown"
-                        aria-expanded="false">
-                        <i class="flag-united-kingdom flag m-0"></i>
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="Dropdown">
-                        <li>
-                            <a class="dropdown-item" href="#"><i class="flag-united-kingdom flag"></i>English <i
-                                    class="fa fa-check text-success check ms-2"></i></a>
-                        </li>
-                        <li>
-                            <hr class="dropdown-divider" />
-                        </li>
-                        <li>
-                            <a class="dropdown-item" href="#"><i class="flag-poland flag"></i>Polski</a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" href="#"><i class="flag-france flag"></i>Français</a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" href="#"><i class="flag-spain flag"></i>Español</a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" href="#"><i class="flag-russia flag"></i>Русский</a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" href="#"><i class="flag-portugal flag"></i>Português</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </section>
         <section id="nav-area">
             <div class="container">
                 <div class="row nav-area-content">
@@ -75,23 +43,46 @@
                     </div>
                     <div class="col-lg-4 col-sm-12 col-md-12 col-12">
                         <div class="logo">
-                            <a href=""><img src="./assets/images/bridey-logo.jpg" alt=""></a>
+                            <a href="home.html"><img src="./assets/images/Logo.svg" alt=""></a>
                         </div>
                     </div>
                     <div class="col-4  d-lg-block d-none">
                         <div class="right-area">
-                            <div class="search"><i class="fa-solid fa-magnifying-glass icon"></i></div>
+                            <div class="search"><i class="fa-solid fa-magnifying-glass icon" data-bs-toggle="modal"
+                                    data-bs-target="#exampleModal"></i></div>
                             <div><i class="fa-regular fa-user icon user-icon"></i></div>
+                            <span class="count-wishlist">0</span>
                             <div><a href="wishlist.html"><i class="fa-regular fa-heart icon"></i></a></div>
+                            <span class="count-basket">0</span>
                             <div class="basket"><a href="basket.html"><i class="fa-solid fa-basket-shopping"></i></a>
                             </div>
                         </div>
                         <div class="login-register d-none">
                             <ul>
-                                <li><a href="login.html">Login</a></li>
+                                <li><a href="login.html">Login</a></li><span>/</span>
                                 <li><a href="register.html">Register</a></li>
 
                             </ul>
+                        </div>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                            aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h1 class="modal-title fs-5" id="exampleModalLabel">Search</h1><img
+                                            src="./assets/images/search-icon.png">
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form>
+                                            <input type="text">
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -118,15 +109,15 @@
             </ul>
         </div>
         <section id="responsive-nav-area" class="d-lg-none">
-
             <div class="container">
                 <div class="row">
                     <div class="col-md-2 col-2 d-lg-none">
                         <div class="hamburger"><i class="fa-solid fa-bars"></i></div>
                     </div>
                     <div class="col-md-10 col-10 d-lg-none">
-                        <div class="left-area">
-                            <div class="search"><i class="fa-solid fa-magnifying-glass icon"></i></div>
+                        <div class="right-area">
+                            <div class="search"><i class="fa-solid fa-magnifying-glass icon" data-bs-toggle="modal"
+                                    data-bs-target="#exampleModal"></i></div>
                             <div><i class="fa-regular fa-user icon"></i></div>
                             <div class="basket"><a href="basket.html"><i class="fa-solid fa-basket-shopping"></i></a>
                             </div>
@@ -139,23 +130,21 @@
             <div class="container">
                 <div class="d-lg-block d-none">
                     <ul class="top-menu">
-                        <a href="home.html">
-                            <li class="active">Home</li>
-                        </a>
-                        <a href="about.html">
-                            <li>About</li>
-                        </a>
-                        <a href="shop.html">
-                            <li>Shop</li>
-                        </a>
-                        <a href="blog.html">
-                            <li>Blog</li>
-                        </a>
-                        <a href="contact.html">
-                            <li>Contact</li>
-                        </a>
-
+                        <img class="decor-img d-none" src="./assets/images/decor2.png">
+                        <li><a href="home.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="shop.html">Shop</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <img class="decor-img d-none" src="./assets/images/decor.png">
                     </ul>
+                    <div class="right-area d-none">
+                        <div class="search"><i class="fa-solid fa-magnifying-glass icon"></i></div>
+                        <div><a href="wishlist.html"><i class="fa-regular fa-heart icon"></i></a></div>
+                        <div class="basket"><a href="basket.html"><i class="fa-solid fa-basket-shopping"></i></a>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </section>
@@ -315,25 +304,27 @@
                 </div>
             </div>
         </section>
-        <section id="block-carousel">
+        <section id="block-carousel-about"
+            style="background-image: url('./assets/images/backgroundd22.webp');background-repeat: no-repeat;background-position: center;">
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="slide">
                             <div class="owl-item">
                                 <div class="slider-content slide-cont">
-                                    <div class="block-image">
-                                        <img src="./assets/images/qoutes-b.png">
+                                    <div class="user-img">
+                                        <img src="./assets/images/team3.jpg">
                                     </div>
                                     <div class="descript slide-color">
-                                        "I can’t thank you all enough. I loved everything about my experience. Thank you
-                                        for helping
-                                        me
-                                        find the dress of my dreams!"
+                                        “I can’t thank you all enough. I loved everything about my experience. Thank you
+                                        for helping me find the dress of my dreams!”
+
                                     </div>
+
                                     <div class="title slide-color">
                                         Kelli Hansen
                                     </div>
+                                    <div class="job">Design</div>
                                 </div>
 
 
@@ -343,51 +334,46 @@
                     <div class="swiper-slide">
                         <div class="slide">
                             <div class="owl-item">
-                                <div class="slider-content">
-                                    <div class="block-image">
-                                        <img src="./assets/images/qoutes.png">
+                                <div class="slider-content slide-cont">
+                                    <div class="user-img">
+                                        <img src="./assets/images/team3.jpg">
                                     </div>
-                                    <div class="descript">
-                                        "I can’t thank you all enough. I loved everything about my experience. Thank you
-                                        for helping
-                                        me
-                                        find the dress of my dreams!"
+                                    <div class="descript slide-color">
+                                        “I can’t thank you all enough. I loved everything about my experience. Thank you
+                                        for helping me find the dress of my dreams!”
+
                                     </div>
-                                    <div class="title">
+
+                                    <div class="title slide-color">
                                         Kelli Hansen
                                     </div>
-                                    <div class="sub-title">
-                                        Los Angeles, USA
-                                    </div>
+                                    <div class="job">Design</div>
                                 </div>
+
+
                             </div>
                         </div>
-
                     </div>
                     <div class="swiper-slide">
                         <div class="slide">
                             <div class="owl-item">
-                                <div class="owl-item">
-                                    <div class="slider-content">
-                                        <div class="block-image">
-                                            <img src="./assets/images/qoutes.png">
-                                        </div>
-                                        <div class="descript">
-                                            "I can’t thank you all enough. I loved everything about my experience. Thank
-                                            you
-                                            for helping
-                                            me
-                                            find the dress of my dreams!"
-                                        </div>
-                                        <div class="title">
-                                            Kelli Hansen
-                                        </div>
-                                        <div class="sub-title">
-                                            Los Angeles, USA
-                                        </div>
+                                <div class="slider-content slide-cont">
+                                    <div class="user-img">
+                                        <img src="./assets/images/team3.jpg">
+                                    </div>
+                                    <div class="descript slide-color">
+                                        “I can’t thank you all enough. I loved everything about my experience. Thank you
+                                        for helping me find the dress of my dreams!”
+
                                     </div>
 
+                                    <div class="title slide-color">
+                                        Kelli Hansen
+                                    </div>
+                                    <div class="job">Design</div>
                                 </div>
+
+
                             </div>
                         </div>
                     </div>
@@ -476,7 +462,7 @@
                             </div>
                             <div class="col-lg-4 col-sm-12 col-12 col-md-12">
                                 <div class="logo">
-                                    <img src="./assets/images/bridey-logo.jpg">
+                                    <img src="./assets/images/Logo.svg">
                                 </div>
                             </div>
                             <div class="col-lg-4 col-sm-12 col-12 col-md-12">
